Boilerplate code completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
     <div class="mdl-tabs__tab-bar">
-        <a routerLink="/displayAll" class="mdl-tabs__tab is-active">Display Stats</a>
-        <a routerLink="/addData" class="mdl-tabs__tab ">Add Data</a>
+        <a id="displayData" routerLink="/displayAll" class="mdl-tabs__tab">Display Stats</a>
+        <a id="addData" routerLink="/addData" class="mdl-tabs__tab ">Add Data</a>
+        <a id="availability" routerLink="/availability" class="mdl-tabs__tab ">Availability</a>
     </div>
 </div>
 <router-outlet></router-outlet>
