--- a/src/app/team-data/team-data.component.html
+++ b/src/app/team-data/team-data.component.html
@@ -7,7 +7,7 @@
 
 
 <div>
-    <table class="mdl-data-table mdl-js-data-table mdl-data-table mdl-shadow--0dp">
+    <table class="mdl-data-table mdl-js-data-table mdl-data-table mdl-shadow--1dp">
         <thead>
             <tr>
                 <th rowspan="2">Player name</th>
@@ -25,7 +25,7 @@
                 <th>Overs Bowled</th>
                 <th>Wickets Taken</th>
                 <th>Economy Rate</th>
-                <th>Best Figures</th>
+                <th>Best Figures(w/r)</th>
             </tr>
         </thead>
         <tbody>
