--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="mdl-tabs__tab-bar">
         <a id="displayData" routerLink="/displayAll" class="mdl-tabs__tab">Display Stats</a>
         <a id="addData" routerLink="/addData" class="mdl-tabs__tab ">Add Data</a>
-        <a id="availability" routerLink="/availability" class="mdl-tabs__tab ">Availability</a>
+        <a id="availability" routerLink="/availability" class="mdl-tabs__tab " hidden disabled="true">Availability</a>
     </div>
 </div>
 <router-outlet></router-outlet>
