--- a/src/app/bowling-data/bowling-data.component.html
+++ b/src/app/bowling-data/bowling-data.component.html
@@ -12,7 +12,7 @@
           <tr>
               <th rowspan="2">Player name</th>
               <th rowspan="2">Total Matches Played</th>
-              <th colspan="5" style="text-align:center">Bowling Stats</th>
+              <th colspan="5" style="text-align:center"></th>
           </tr>
           <tr>
 
