Seggregation of stats done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
     <div class="mdl-tabs__tab-bar">
-        <a id="displayData" routerLink="/displayAll" class="mdl-tabs__tab">Display Stats</a>
-        <a id="addData" routerLink="/addData" class="mdl-tabs__tab ">Add Data</a>
-        <a id="bowlingData" routerLink="/bowlingData" class="mdl-tabs__tab">Bowling Stats</a>
+        <a id="displayData" routerLink="/displayAll" class="mdl-tabs__tab" hidden disabled="true">Display Stats</a>
         <a id="battingData" routerLink="/battingData" class="mdl-tabs__tab">Batting Stats</a>
-        <a id="recentForm" routerLink="/recentForm" class="mdl-tabs__tab">RecentForm</a>
+        <a id="bowlingData" routerLink="/bowlingData" class="mdl-tabs__tab">Bowling Stats</a>
+        <a id="addData" routerLink="/addData" class="mdl-tabs__tab ">Add Data</a>
+        <a id="recentForm" routerLink="/recentForm" class="mdl-tabs__tab" hidden disabled="true">Recent Form</a>
         <a id="availability" routerLink="/availability" class="mdl-tabs__tab " hidden disabled="true">Availability</a>
     </div>
 </div>
