--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <a id="battingData" routerLink="/battingData" class="mdl-tabs__tab">Batting Stats</a>
         <a id="bowlingData" routerLink="/bowlingData" class="mdl-tabs__tab">Bowling Stats</a>
         <a id="addData" routerLink="/addData" class="mdl-tabs__tab ">Add Data</a>
-        <a id="recentForm" routerLink="/recentForm" class="mdl-tabs__tab" hidden disabled="true">Recent Form</a>
+        <a id="recentForm" routerLink="/recentForm" class="mdl-tabs__tab">Recent Form</a>
         <a id="availability" routerLink="/availability" class="mdl-tabs__tab " hidden disabled="true">Availability</a>
     </div>
 </div>
