--- a/src/app/batting-data/batting-data.component.html
+++ b/src/app/batting-data/batting-data.component.html
@@ -5,24 +5,24 @@
     </div>
 </form>
 
-
+<div>
+    <span class="table-center"><h6>6's  and 4's from 2018 only</h6></span>
+</div>
 <div>
     <table class="mdl-data-table mdl-js-data-table mdl-data-table mdl-shadow--1dp table-center">
         <thead>
             <tr>
-                <th rowspan="2">Player name</th>
-                <!-- <th rowspan="2">Role</th> -->
-                <th rowspan="2">Total Matches Played</th>
+                <th>Player name</th>
+                <th>Matches Played</th>
                 <th>Innings Batted</th>
-                <th colspan="5" style="text-align:center"></th>
-            </tr>
-            <tr>
-
-                <th>Total Runs Scored</th>
-                <th>Total Balls Played</th>
+                <th>Runs Scored</th>
+                <th>Balls Played</th>
                 <th>Not outs</th>
                 <th>High score</th>
                 <th>Average</th>
+                <th>6s</th>
+                <th>4s</th>
+                <th>Strike Rate</th>
             </tr>
         </thead>
         <tbody>
@@ -37,6 +37,9 @@
                     <td>{{playerStats.battingStats.notOuts}}</td>
                     <td>{{playerStats.battingStats.highestScore}}</td>
                     <td>{{playerStats.battingStats.battingAverage}}</td>
+                    <td>{{playerStats.battingStats.totalSixesScored}}</td>
+                    <td>{{playerStats.battingStats.totalFoursScored}}</td>
+                    <td>{{playerStats.battingStats.strikeRate}}</td>
                 </tr>
             </ng-container>
         </tbody>
